# SiriusPulse

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT.md  CODE_AUDIT_REPORT.md  Dockerfile  LICENSE  Makefile  README.md  README_NEW.md  docker-compose.yml  fix_duplicate_token_records.py  main.py  pyproject.toml  start.pyw
.codegraph/: daemon.pid
.github/: copilot-instructions.md
docs/: README.md  architecture.md  best-practices.md  biography-system-design.md  brain.md  change-impact-guide.md  configuration-guide.md  engine-deep-dive.md  full-architecture-flow.md  models-reference.md  persistence-system.md  persona-lifecycle.md  persona-system.md  platforms.md  plugin-ai-reference.md  project-issues.md  project-review.md  provider-system.md  skill-guide.md  sticker-rag-system.md  webui.md
examples/: emotional_group_chat_usage.py  event_verification_usage.py  roleplay_template_selection.py
scripts/: ci_check.py  cleanup_biography_pollution.py  container-admin.json.example  container-admin.service  container_admin_proxy.py  docs_sync_agent.py  fix_clusterer.py  generate_api_docs.py  list_provider_models.py  migrate_glossary_to_persona.py  migrate_to_evolution.py  migrate_to_provenance.py  migrate_to_sqlite.py  migrate_to_standalone.py  migrate_to_unified_db.py  setup_dev_env.py  temp_cluster.py  update-container.sh
sirius_chat/: __init__.py  persona_manager.py  persona_worker.py  prompt_builders.py
sirius_pulse/: __init__.py  background_tasks.py  cli.py  developer_profiles.py  exceptions.py  logging_config.py  mixins.py  persona_config.py  persona_manager.py  persona_worker.py  reply_time_curve.py  trait_taxonomy.py  tui.py
skills/: README.md
specs/: 2026-07-12-memory-unit-semantic-dedup-design.md  2026-07-12-memory-unit-semantic-dedup-implementation-plan.md  2026-07-19-v2-group-agent-foundation.md
tests/: conftest.py  test_agent_turn.py  test_api_integrity.py  test_at_mention_parsing.py  test_bash_skill.py  test_basic_memory.py  test_biography.py  test_biography_claims.py  test_brain_skill_filter.py  test_builtin_message_skills.py  test_butler_assistant.py  test_config.py  (+88 more)
(+492 files in other folders)
