[project]
name = "sirius-chat"
version = "1.1.0"
description = "A multi-user RPG dialogue LLM framework compatible with OpenAI providers"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sparrived", email = "sparrived@example.com"}
]
license = "MIT"
keywords = ["llm", "dialogue", "multi-user", "roleplay", "framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"watchdog>=4.0.0",
	"psutil>=5.9.0",
	"Pillow>=9.0.0",
	"requests>=2.28.0",
	"beautifulsoup4>=4.11.0",
	"sentence-transformers>=2.0.0",
	"tiktoken>=0.5.0",
	"chromadb>=0.5.0",
	"aiohttp>=3.8.0",
	"websockets>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/Sparrived/SiriusChat"
Documentation = "https://github.com/Sparrived/SiriusChat"
Repository = "https://github.com/Sparrived/SiriusChat.git"
Issues = "https://github.com/Sparrived/SiriusChat/issues"

[project.optional-dependencies]
test = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.21.0",
	"pytest-cov>=4.0.0",
	"pytest-xdist>=3.0.0",  # 并行测试执行
	"psutil>=5.9.0",  # 性能监控和系统信息
]
provider = [
	"httpx>=0.24.0",  # 异步HTTP客户端，用于LLM API调用
	"tenacity>=8.0.0",  # 重试库，用于提高可靠性
]
dev = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.21.0",
	"pytest-cov>=4.0.0",
	"psutil>=5.9.0",  # 性能监控和系统信息
	"httpx>=0.24.0",
	"tenacity>=8.0.0",
	"tiktoken>=0.5.0",  # 可选：精确token估算
	"black>=23.0.0",  # 代码格式化
	"isort>=5.13.0",  # Import排序
	"flake8>=6.0.0",  # Linter
	"pylint>=3.0.0",  # 代码分析
	"mypy>=1.0.0",  # 类型检查
	"bandit>=1.7.0",  # 安全检查
	"pre-commit>=3.0.0",  # Git钩子
	"build>=0.10.0",  # 构建工具
	"twine>=4.0.0",  # 包上传
]
quality = [
	"tiktoken>=0.5.0",  # 精确token估算库
]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
addopts = "--basetemp=.pytest_tmp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sirius_chat*"]
